--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "^0.0.17",
+    "@react-email/render": "^0.0.15",
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +32,7 @@
     "lucide-react": "^0.363.0",
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.4",
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
